--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DEBUG=False #set to false in production
 DB_NAME='gallery'
 DB_USER='Mariga'
 DB_PASSWORD='password'
-DB_HOST='127.0.0.1'
+DB_HOST='127.0.0.1, angelic-art-gallery-production.up.railway.app'
 MODE='dev' #set to 'prod' in production
 DISABLE_COLLECTSTATIC=1
 
